Lisätty staattiset HTML-sivut ja päivitetty linkkejä README-tiedostoon

--- a/app/views/suunnitelmat/login.html
+++ b/app/views/suunnitelmat/login.html
@@ -1,21 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Kirjaudu sisään</h1>
+  <h1>Login</h1>
 
   <!-- Kaikki lomakkeen elementit form-tagin sisään -->
   <form>
     <!-- Tekstikenttä käyttäjätunnukselle -->
     <div class="form-group">
-      <label>Käyttäjätunnus</label>
+      <label>Username</label>
       <input type="text" class="form-control">
     </div>
 
     <!-- Salasanakenttä salasanalle -->
     <div class="form-group">
-      <label>Salasana</label>
+      <label>Password</label>
       <input type="password" class="form-control">
     </div>
 
-    <button type="submit" class="btn btn-primary">Kirjaudu sisään</button>
+    <button type="submit" class="btn btn-primary">Login</button>
   </form>
 {% endblock %}
