--- a/app/views/base.html
+++ b/app/views/base.html
@@ -1,64 +1,80 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>
-      {% block title %}
-        Tietokantasovellus
-      {% endblock %}
-    </title>
+        <title>
+            {% block title %}
+            Tietokantasovellus
+            {% endblock %}
+        </title>
 
-    {% block head %}
-      <!-- Bootstrap (tyylitiedosto) -->
-      <link href="{{base_path}}/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        {% block head %}
+        <!-- Bootstrap (tyylitiedosto) -->
+        <link href="{{base_path}}/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-      <!-- Oma tyylitiedostomme -->
-      <link href="{{base_path}}/assets/css/site.css" rel="stylesheet">
-    {% endblock %}
-  </head>
+        <!-- Oma tyylitiedostomme -->
+        <link href="{{base_path}}/assets/css/site.css" rel="stylesheet">
+        {% endblock %}
+    </head>
 
-  <body>
+    <body>
 
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container-fluid">
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="container-fluid">
 
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <!-- Sovelluksen nimi -->
-          <a class="navbar-brand" href="{{base_path}}">Tsoha Bootstrap</a>
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!-- Sovelluksen nimi -->
+                    
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{base_path}}"><big>Todo-list</big></a></li>
+                    </ul>
+                        
+                </div>
+
+                <div class="collapse navbar-collapse" id="navigation">
+                    <!-- Navigaation linkit -->
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{base_path}}/todo_list">My tasks</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{base_path}}/todo_show">Show task</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{base_path}}/todo_edit">Edit task</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{base_path}}/login">Login</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{base_path}}/logout">Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div id="main-container">
+            <!-- Dynaaminen sisältö tulee tähän -->
+            {% block content %}{% endblock %}
         </div>
 
-        <div class="collapse navbar-collapse" id="navigation">
-          <ul class="nav navbar-nav">
-            <!-- Navigaation linkit -->
-            <li><a href="{{base_path}}">Etusivu</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+        {% block body %}
+        <!-- jQuery -->
+        <script src="{{base_path}}/vendor/jquery.min.js"></script>
 
-    <div id="main-container">
-      <!-- Dynaaminen sisältö tulee tähän -->
-      {% block content %}{% endblock %}
-    </div>
+        <!-- Bootstrap (skriptitiedosto) -->
+        <script src="{{base_path}}/vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    {% block body %}
-      <!-- jQuery -->
-      <script src="{{base_path}}/vendor/jquery.min.js"></script>
-
-      <!-- Bootstrap (skriptitiedosto) -->
-      <script src="{{base_path}}/vendor/bootstrap/js/bootstrap.min.js"></script>
-
-      <!-- Oma skriptitiedostomme -->
-      <script src="{{base_path}}/assets/js/site.js"></script>
-    {% endblock %}
-  </body>
+        <!-- Oma skriptitiedostomme -->
+        <script src="{{base_path}}/assets/js/site.js"></script>
+        {% endblock %}
+    </body>
 </html>
