--- a/app/views/base.html
+++ b/app/views/base.html
@@ -43,7 +43,7 @@
                 <div class="collapse navbar-collapse" id="navigation">
                     <!-- Navigaation linkit -->
                     <ul class="nav navbar-nav">
-                        <li><a href="{{base_path}}/todo_list">My tasks</a></li>
+                        <li><a href="{{base_path}}/task">My tasks</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
                         <li><a href="{{base_path}}/todo_show">Show task</a></li>
