--- a/app/views/task/edit.html
+++ b/app/views/task/edit.html
@@ -9,8 +9,6 @@
 {% endif %}
 
 <h1>Edit your task: {{task.name}}</h1>
-<h1>{{task.name}}</h1>
-<h1>{{task.name}}</h1>
 
 <!--<form method="post" action="{{base_path}}/task/{{task.id}}" style="display: inline-block;">-->
     
@@ -23,15 +21,15 @@
     </div>
     <div class="form-group">
         <label>Name</label>
-        <input type="text" class="form-control" value="{{task.name}}">
+        <input type="text" name ="name" class="form-control" value="{{task.name}}">
     </div>
     <div class="form-group">
         <label>Added</label>
-        <input type="date" class="form-control" value="{{task.added}}">
+        <input type="date" name ="added" class="form-control" value="{{task.added}}">
     </div>
     <div class="form-group">
         <label>Deadline</label>
-        <input type="date" class="form-control" value="{{task.deadline}}">
+        <input type="date" name ="deadline" class="form-control" value="{{task.deadline}}">
     </div>
 <!--    <div class="form-group">
         <label>Description</label>
