Added operator model and views, modified README.md and documentation

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -33,36 +33,61 @@
                         <span class="icon-bar"></span>
                     </button>
                     <!-- Sovelluksen nimi -->
-                    
+
                     <ul class="nav navbar-nav">
                         <li><a href="{{base_path}}"><big>Todo-list</big></a></li>
                     </ul>
-                        
+
                 </div>
 
                 <div class="collapse navbar-collapse" id="navigation">
                     <!-- Navigaation linkit -->
+
+                    <ul class="nav navbar-nav">
+                    </ul>
+                    <ul class="nav navbar-nav">
+                    </ul>
+
+                    {% if user_logged_in %}
                     <ul class="nav navbar-nav">
                         <li><a href="{{base_path}}/task">My tasks</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
-                        <li><a href="{{base_path}}/todo_show">Show task</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav">
-                        <li><a href="{{base_path}}/todo_edit">Edit task</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav">
-                        <li><a href="{{base_path}}/login">Login</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav">
                         <li><a href="{{base_path}}/logout">Logout</a></li>
                     </ul>
+                    {% endif %}
+
+                    {% if not user_logged_in %}
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{base_path}}/register">Register</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{base_path}}/">Login</a></li>
+                    </ul>
+                    {% endif %}
                 </div>
             </div>
         </nav>
 
         <div id="main-container">
             <!-- Dynaaminen sisältö tulee tähän -->
+            
+            {% if message %}
+            <div class="alert alert-success">
+                {{message}}
+            </div>
+            {% endif %}
+
+            {% if errors %}
+            <div class="alert alert-danger">
+                <ul>
+                    {% for error in errors %}
+                    <li>{{error}}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+            
             {% block content %}{% endblock %}
         </div>
 
