--- a/app/views/task/index.html
+++ b/app/views/task/index.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Your tasks</h1>
+
+  {% if user_logged_in %}
+    <h1>{{user_logged_in.username}}'s tasks</h1>
+  {% endif %}
+
+
 
 <p>
     <a href="{{base_path}}/task/new" class="btn btn-success">Add a task</a>
