--- a/app/views/task/new.html
+++ b/app/views/task/new.html
@@ -2,30 +2,21 @@
 {% block content %}
 <h1>Add a new task</h1>
 
-{% if errors %}
-<div class="alert alert-danger">
-    <ul>
-        {% for error in errors %}
-        <li>{{error}}</li>
-        {% endfor %}
-    </ul>
-</div>
-{% endif %}
 
 <form method="post" action="{{base_path}}/task/add">
     <div class="form-group">
         <label>Name</label>
-        <input type="text" name="name" class="form-control">
+        <input type="text" name="name" class="form-control" value={% if task %} "{{task.name}}" {% endif %}>
     </div>
 
     <div class="form-group">
         <label>Added</label>
-        <input type="date" name="added" class="form-control">
+        <input type="date" name="added" class="form-control" value={% if task %} "{{task.added}}" {% endif %}>
     </div>
 
     <div class="form-group">
         <label>Deadline</label>
-        <input type="date" name="deadline" class="form-control">
+        <input type="date" name="deadline" class="form-control" value={% if task %} "{{task.deadline}}" {% endif %}>
     </div>
 
     <div class="form-group">
