--- a/app/views/task/new.html
+++ b/app/views/task/new.html
@@ -18,7 +18,14 @@
         <label>Deadline</label>
         <input type="date" name="deadline" class="form-control" value={% if task %} "{{task.deadline}}" {% endif %}>
     </div>
-
+    <div class="form-group">
+        <label>Category</label>
+        <select class="form-control" name="categories[]" multiple="">
+            {% for category in categories %}
+            <option value="{{category.id}}">{{category.name}}</option>
+            {% endfor %}
+        </select>
+    </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Add</button>
     </div>
