--- a/app/views/task/show.html
+++ b/app/views/task/show.html
@@ -20,7 +20,7 @@
     <!--    <li><strong>Status:</strong> <label class="label label-danger">undone</label></li>-->
     <li><strong>Deadline:</strong> {{task.deadline}}</li>
     <li><strong>Categories:</strong>
-        {% for category in categories %}
+        {% for category in task.findCategories %}
         <label class="label label-info">{{category.name}}</label>
         {% endfor %}
     </li>
