--- a/app/views/base.html
+++ b/app/views/base.html
@@ -50,11 +50,15 @@
 
                     {% if user_logged_in %}
                     <ul class="nav navbar-nav">
+                        <ul class="nav navbar-nav">
+                        <li><a href="{{base_path}}/category/all">Categories</a></li>
+                    </ul>
                         <li><a href="{{base_path}}/task">My tasks</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
                         <li><a href="{{base_path}}/logout">Logout</a></li>
                     </ul>
+                    
                     {% endif %}
 
                     {% if not user_logged_in %}
