--- a/app/views/task/edit.html
+++ b/app/views/task/edit.html
@@ -3,29 +3,37 @@
 
 
 <h1>Edit your task: {{task.name}}</h1>
-    
+
 <form method="post" action="{{base_path}}/task/{{task.id}}/edit">
-    
+
     <div class="checkbox">
         <label>
             <input type="checkbox">
             Done
         </label>
     </div>
-    
+
     <div class="form-group">
         <label>Name</label>
         <input type="text" name ="name" class="form-control" value="{{task.name}}">
     </div>
-    
+
     <div class="form-group">
         <label>Added</label>
         <input type="date" name ="added" class="form-control" value="{{task.added}}">
     </div>
-    
+
     <div class="form-group">
         <label>Deadline</label>
         <input type="date" name ="deadline" class="form-control" value="{{task.deadline}}">
+    </div>
+    <div class="form-group">
+        <label>Category</label>
+        <select class="form-control" name="categories[]" multiple="">
+            {% for category in categories %}
+            <option value="{{category.id}}">{{category.name}}</option>
+            {% endfor %}
+        </select>
     </div>
 
     <button type="submit" class="btn btn-primary">Save</button>
