--- a/app/views/task/new.html
+++ b/app/views/task/new.html
@@ -26,6 +26,14 @@
             {% endfor %}
         </select>
     </div>
+        <div class="form-group">
+        <label>Priority</label>
+        <select class="form-control" name="priorities[]" multiple="">
+            {% for priority in priorities %}
+            <option value="{{priority.id}}">{{priority.name}}</option>
+            {% endfor %}
+        </select>
+    </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Add</button>
     </div>
