--- a/app/views/task/new.html
+++ b/app/views/task/new.html
@@ -28,7 +28,7 @@
     </div>
         <div class="form-group">
         <label>Priority</label>
-        <select class="form-control" name="priorities[]" multiple="">
+        <select class="form-control" name="priority">
             {% for priority in priorities %}
             <option value="{{priority.id}}">{{priority.name}}</option>
             {% endfor %}
