Added current date value

--- a/app/views/task/index.html
+++ b/app/views/task/index.html
@@ -52,6 +52,10 @@
                     <th><a class="btn btn-default btn-sm" href="#">Edit</a></th>-->
         </tr>
         {% endfor%}
+        
+    
     </tbody>
+    
 </table>
+<!--<h1>Done tasks</h1>-->
 {% endblock %}
