Added a date validator and enabled choosing no categories

--- a/app/views/task/index.html
+++ b/app/views/task/index.html
@@ -32,9 +32,16 @@
             <td>{{task.deadline}}</td>
 
             <td>
+                {% if task.findCategories == null %}
+                <p>None</p>
+                {% endif %}
                 {% for category in task.findCategories %}
+                
+                
                 <label class="label label-info">{{category.name}}</label>
+                
                 {% endfor %}
+                
             </td>
 
             <td>
