Categories are now user specific

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -48,19 +48,27 @@
                     <ul class="nav navbar-nav">
                     </ul>
 
+
+
                     {% if user_logged_in %}
                     <ul class="nav navbar-nav">
                         <ul class="nav navbar-nav">
-                        <li><a href="{{base_path}}/category/all">Categories</a></li>
-                    </ul>
-                        <li><a href="{{base_path}}/task">My tasks</a></li>
+                            <li><a href="{{base_path}}/category/all">My Categories</a></li>
+                        </ul>
+                        <li><a href="{{base_path}}/task">My Tasks</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
                         <li><a href="{{base_path}}/logout">Logout</a></li>
                     </ul>
                     
+                    {% if user_logged_in.status == 0 %}
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{base_path}}/account/all">Manage Accounts</a></li>
+                    </ul>
+
                     {% endif %}
 
+                    {% endif %}
                     {% if not user_logged_in %}
                     <ul class="nav navbar-nav">
                         <li><a href="{{base_path}}/register">Register</a></li>
@@ -75,7 +83,7 @@
 
         <div id="main-container">
             <!-- Dynaaminen sisältö tulee tähän -->
-            
+
             {% if message %}
             <div class="alert alert-success">
                 {{message}}
@@ -91,7 +99,7 @@
                 </ul>
             </div>
             {% endif %}
-            
+
             {% block content %}{% endblock %}
         </div>
 
