--- a/app/views/task/new.html
+++ b/app/views/task/new.html
@@ -11,7 +11,7 @@
 
     <div class="form-group">
         <label>Added</label>
-        <input type="date" name="added" class="form-control" value={{ "now"|date("Y-m-d") }}>
+        <input type="date" name="added" class="form-control" value={{ "now"|date("Y-m-d") }} readonly>
     </div>
 
     <div class="form-group">
@@ -22,21 +22,23 @@
         <label>Category</label>
         <select class="form-control" name="categories[]" multiple="">
             {% for category in categories %}
+
             <option value="{{category.id}}">{{category.name}}</option>
             {% endfor %}
         </select>
     </div>
-        <div class="form-group">
+    <div class="form-group">
         <label>Priority</label>
         <select class="form-control" name="priority">
-            {% for priority in priorities %}
-            <option value="{{priority.id}}">{{priority.name}}</option>
-            
-            {% endfor %}
-        </select>
-    </div>
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">Add</button>
-    </div>
+            {% for prior in priorities %}
+            <option {% if task %} {% if priority.id == prior.id %} selected {% endif %} {% endif %}
+                value={{prior.id}}>{{prior.name}}
+        </option>
+        {% endfor %}
+    </select>
+</div>
+<div class="form-group">
+    <button type="submit" class="btn btn-primary">Add</button>
+</div>
 </form>
 {% endblock %}
