--- a/app/views/base.html
+++ b/app/views/base.html
@@ -61,9 +61,9 @@
                         <li><a href="{{base_path}}/logout">Logout</a></li>
                     </ul>
                     
-                    {% if user_logged_in.status == 0 %}
+                    {% if user_logged_in.status == 1 %}
                     <ul class="nav navbar-nav">
-                        <li><a href="{{base_path}}/account/all">Manage Accounts</a></li>
+                        <li><a href="{{base_path}}/operator/all">Manage Accounts</a></li>
                     </ul>
 
                     {% endif %}
