--- a/app/views/operator/index.html
+++ b/app/views/operator/index.html
@@ -5,26 +5,29 @@
 <h1 class="list-group-item">Accounts</h1>
 <table class="table table-striped table-bordered">
     <thead>
-        
-    <tr>
-        <th>Username</th>
-        <th>Password</th>
-        <th>Manage</th>
-    </tr>
+
+        <tr>
+            <th>Username</th>
+            <th>Password</th>
+            <th>Manage</th>
+        </tr>
     </thead>
 
     <tbody>
-    {% for operator in operators %}
-    <tr>
-        <td>{{operator.username}}</td>
-        <td>{{operator.password}}</td>
+        {% for operator in operators %}
+        <tr>
+            <td>{{operator.username}}</td>
+            <td>{{operator.password}}</td>
 
-        <th>
-            <a href="{{base_path}}/operator/{{operator.id}}/edit" class="btn btn-default">Edit</a>
-            {{buttons.destroy_button("#{base_path}/account/#{account.id}/delete")}}
-        </th>
-    </tr>
-    {% endfor %}
+            <th> {% if operator.username != 'admin' %}
+                <form method="post" action="{{base_path}}/operator/{{operator.id}}/destroy" style="display: inline-block;">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+            </th>
+            {% endif %}
+
+            </form>
+        </tr>
+        {% endfor %}
     </tbody>
 </table>
 {% endblock %}
