CDN jquery test

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -105,8 +105,8 @@
 
         {% block body %}
         <!-- jQuery -->
-        <script src="{{base_path}}/vendor/jquery.min.js"></script>
-
+        <!-- {{base_path}}/vendor/jquery.min.js --><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        
         <!-- Bootstrap (skriptitiedosto) -->
         <script src="{{base_path}}/vendor/bootstrap/js/bootstrap.min.js"></script>
 
