--- a/app/views/base.html
+++ b/app/views/base.html
@@ -13,7 +13,8 @@
 
         {% block head %}
         <!-- Bootstrap (tyylitiedosto) -->
-        <link href="{{base_path}}/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+       <!--  <link href="{{base_path}}/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
         <!-- Oma tyylitiedostomme -->
         <link href="{{base_path}}/assets/css/site.css" rel="stylesheet">
